# gauxtb

./: README.md  pyproject.toml  setup.py
gauxtb/: api.py
